--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@types/cordova": "^11.0.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "cordova": "^12.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -55,8 +55,11 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "ts-loader": "^4.0.0",
-    "typescript": "4.4",
+    "typescript": "4.9",
     "webpack": "^5.93.0",
     "webpack-cli": "^4.6.0"
+  },
+  "devDependencies": {
+    "typedoc": "^0.26.4"
   }
 }
