--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,12 +16,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/configure-pages@v4
+    - uses: actions/configure-pages@v5
     - uses: actions/setup-node@v4
       with:
         node-version: 18
